PUSH NOTE : 2025-03-17.md

--- a/content/reflections/2025-03-17.md
+++ b/content/reflections/2025-03-17.md
@@ -25,4 +25,11 @@ tags:
     - [Philosophy](../topics/philosophy.md)  
   
 ## 📚 Books  
-- [How Google Tests Software](../books/how-google-tests-software.md)
+- [How Google Tests Software](../books/how-google-tests-software.md)  
+- [Foundations of Software Testing](../books/foundations-of-software-testing.md)  
+- [Model Checking](../books/model-checking.md)  
+- [Executive Function 'Dysfunction' - Strategies for Educators and Parents](../books/executive-function-dysfunction.md)  
+- [Smart but Scattered](../books/smart-but-scattered.md)  
+- [Taking Charge of Adult ADHD by Russell Barkley](../books/taking-charge-of-adult-adhd.md)  
+- [Executive Functions: What They Are, How They Work, and Why They Evolved](../books/executive-functions.md)  
+- [Executive Functions: Development, Assessment, and Intervention](../books/executive-functions-development-assessment-and-intervention.md)  
