PUSH NOTE : 2025-03-17.md

--- a/content/reflections/2025-03-17.md
+++ b/content/reflections/2025-03-17.md
@@ -33,3 +33,6 @@ tags:
 - [Taking Charge of Adult ADHD by Russell Barkley](../books/taking-charge-of-adult-adhd.md)  
 - [Executive Functions: What They Are, How They Work, and Why They Evolved](../books/executive-functions.md)  
 - [Executive Functions: Development, Assessment, and Intervention](../books/executive-functions-development-assessment-and-intervention.md)  
+- [Principles of Neuropsychology](../books/principles-of-neuropsychology.md)  
+- [The Brain That Changes Itself](../books/the-brain-that-changes-itself.md)  
+- [Soft Wired: How the New Science of Brain Plasticity Can Change Your Life](../books/soft-wired-how-the-new-science-of-brain-plasticity-can-change-your-life.md)  
