PUSH NOTE : 2025-03-17.md

--- a/content/reflections/2025-03-17.md
+++ b/content/reflections/2025-03-17.md
@@ -36,3 +36,16 @@ tags:
 - [Principles of Neuropsychology](../books/principles-of-neuropsychology.md)  
 - [The Brain That Changes Itself](../books/the-brain-that-changes-itself.md)  
 - [Soft Wired: How the New Science of Brain Plasticity Can Change Your Life](../books/soft-wired-how-the-new-science-of-brain-plasticity-can-change-your-life.md)  
+- [Spark: The Revolutionary New Science of Exercise and the Brain](../books/spark-the-revolutionary-new-science-of-exercise-and-the-brain.md)  
+- [How to Change](../books/how-to-change.md)  
+- [Elasticsearch: The Definitive Guide](../books/elasticsearch-the-definitive-guide.md)  
+  
+## 📺 Videos  
+- [How to Become an Expert in ANYTHING - The Dunning Kruger Effect](../videos/how-to-become-an-expert-in-anything-the-dunning-kruger-effect.md)  
+- [You're Not Stupid How To Never Lose Focus Again](../videos/You're%20Not%20Stupid%20How%20To%20Never%20Lose%20Focus%20Again.md)  
+  
+## 💾 Software  
+- [Elastic Search](../software/elastic-search.md)  
+- [Redis](../software/redis.md)  
+- [Ollama](../software/ollama.md)  
+- [Open WebUI](../software/open-webui.md)  
