PUSH NOTE : 2025-03-17.md

--- a/content/reflections/2025-03-17.md
+++ b/content/reflections/2025-03-17.md
@@ -7,7 +7,7 @@ URL: https://bagrounds.org/reflections/2025-03-17
 Author: "[[bryan-grounds]]"
 tags: 
 ---
-[Home](../index.md) > [Reflections](./index.md) | [⏮️](./2025-03-16.md)  
+[Home](../index.md) > [Reflections](./index.md) | [⏮️](./2025-03-16.md) [⏭️](./2025-03-18.md)  
 # 2025-03-17  
 ## 🌌 Topics  
 - [A Hierarchical View of Human Knowledge](../topics/a-hierarchical-view-of-human-knowledge.md)  
@@ -42,7 +42,7 @@ tags:
   
 ## 📺 Videos  
 - [How to Become an Expert in ANYTHING - The Dunning Kruger Effect](../videos/how-to-become-an-expert-in-anything-the-dunning-kruger-effect.md)  
-- [You're Not Stupid How To Never Lose Focus Again](../videos/You're%20Not%20Stupid%20How%20To%20Never%20Lose%20Focus%20Again.md)  
+- [You're Not Stupid: How To Never Lose Focus Again](../videos/youre-not-stupid-how-to-never-lose-focus-again.md)  
   
 ## 💾 Software  
 - [Elastic Search](../software/elastic-search.md)  
