PUSH NOTE : 2025-03-18.md

--- a/content/reflections/2025-03-18.md
+++ b/content/reflections/2025-03-18.md
@@ -12,6 +12,9 @@ tags:
 ## 💾 Software   
 - [Obsidian](../software/obsidian.md)  
 - [Vensim](../software/vensim.md)  
+- [Express.js](../../express-js.md)  
+- [Zod](../software/zod.md)  
+- [Zodios](../software/zodios.md)  
   
 ## 📚 Books  
 - [Deep Learning](../books/deep-learning.md)  
