PUSH NOTE : 2025-03-18.md

--- a/content/reflections/2025-03-18.md
+++ b/content/reflections/2025-03-18.md
@@ -7,12 +7,12 @@ URL: https://bagrounds.org/reflections/2025-03-18
 Author: "[[bryan-grounds]]"
 tags: 
 ---
-[Home](../index.md) > [Reflections](./index.md) | [⏮️](./2025-03-17.md)  
+[Home](../index.md) > [Reflections](./index.md) | [⏮️](./2025-03-17.md) [⏭️](./2025-03-20.md)  
 # 2025-03-18  
 ## 💾 Software   
 - [Obsidian](../software/obsidian.md)  
 - [Vensim](../software/vensim.md)  
-- [Express.js](../../express-js.md)  
+- [Express.js](../software/express.md)  
 - [Zod](../software/zod.md)  
 - [Zodios](../software/zodios.md)  
   
@@ -30,6 +30,7 @@ tags:
 - [Incognito: The Secret Lives of the Brain](../books/incognito.md)  
 - [Better Than Before: What I Learned About Making and Breaking Habits - to Sleep More, Quit Sugar, Procrastinate Less, and Generally Build a Happier Life](../books/better-than-before.md)  
 - [The Innovator's Dilemma](../books/the-innovators-dilemma.md)  
+- [The Science of Storytelling](../books/the-science-of-storytelling.md)  
   
 ## 🌌 Topics  
 - [Control Systems](../topics/control-systems.md)  
