PUSH NOTE : 2025-03-20.md

--- a/content/reflections/2025-03-20.md
+++ b/content/reflections/2025-03-20.md
@@ -11,3 +11,12 @@ tags:
 # 2025-03-20  
 ## 💾 Software  
 - [Babylon.js](../software/babylon.md)  
+- [Git](../software/git.md)  
+- [Cursor](../software/cursor.md)  
+- [GitHub Copilot for VS Code](../software/github-copilot-for-vs-code.md)  
+- [REST](../software/rest.md)  
+  
+## 📚 Books  
+- [Architectural Styles and the Design of Network Based Software Architectures](../books/architectural-styles-and-the-design-of-network-based-software-architectures.md)  
+- [Domain-Driven Design: Tackling Complexity in the Heart of Software](../books/domain-driven-design.md)  
+- [Making Reliable Distributed Systems in the Presence of Software Errors](../books/making-reliable-distributed-systems-in-the-presence-of-software-errors.md)  
