PUSH NOTE : 2025-03-10.md

--- a/content/reflections/2025-03-10.md
+++ b/content/reflections/2025-03-10.md
@@ -26,7 +26,7 @@ tags:
 - [Continuous Delivery](../books/continuous-delivery.md)  
 - [Site Reliability Engineering](../books/site-reliability-engineering.md)  
 - [Designing Data-Intensive Applications](../books/designing-data-intensive-applications.md)  
-- [Distributed Systems](../books/Distributed%20Systems.md)  
+- [distributed-systems](../books/distributed-systems.md)  
 - [Distributed Algorithms](../books/distributed-algorithms.md)  
 - [Principles of Model Checking](../books/principles-of-model-checking.md)  
 - [Category Theory for Programmers](../books/category-theory-for-programmers.md)  
