PUSH NOTE : 2025-03-20.md

--- a/content/reflections/2025-03-20.md
+++ b/content/reflections/2025-03-20.md
@@ -20,3 +20,21 @@ tags:
 - [Architectural Styles and the Design of Network Based Software Architectures](../books/architectural-styles-and-the-design-of-network-based-software-architectures.md)  
 - [Domain-Driven Design: Tackling Complexity in the Heart of Software](../books/domain-driven-design.md)  
 - [Making Reliable Distributed Systems in the Presence of Software Errors](../books/making-reliable-distributed-systems-in-the-presence-of-software-errors.md)  
+- [Don't Make Me Think, Revisited: A Common Sense Approach to Web Usability](../books/dont-make-me-think-revisited.md)  
+- [Universal Principles of Design](../books/universal-principles-of-design.md)  
+- [The Design of Everyday Things](../books/the-design-of-everyday-things.md)  
+- [Presentation Zen: Simple Ideas on Presentation Design and Delivery](../books/presentation-zen.md)  
+- [Resonate: Present Visual Stories that Transform Audiences](../books/resonate.md)  
+- [Made to Stick: Why Some Ideas Survive and Others Die](../books/made-to-stick.md)  
+  
+## 🌌 Topics  
+- [Knowledge](../topics/a-hierarchical-view-of-human-knowledge.md)  
+    - [Social Sciences](../topics/social-sciences.md)  
+        - [Communication Studies](../topics/communication-studies.md)  
+            - [Public Speaking and Rhetoric](../topics/public-speaking-and-rhetoric.md)  
+                - [Informative Speaking](../topics/informative-speaking.md)  
+    - [Arts](../topics/arts.md)  
+        - [Literary Arts](../topics/literary-arts.md)  
+        - [Applied Arts](../topics/applied-arts.md)  
+            - [Graphic Design](../topics/graphic-design.md)  
+    - [Religion](../topics/religion.md)  
