PUSH NOTE : 2025-03-20.md

--- a/content/reflections/2025-03-20.md
+++ b/content/reflections/2025-03-20.md
@@ -7,7 +7,7 @@ URL: https://bagrounds.org/reflections/2025-03-20
 Author: "[[bryan-grounds]]"
 tags: 
 ---
-[Home](../index.md) > [Reflections](./index.md) | [⏮️](./2025-03-18.md)  
+[Home](../index.md) > [Reflections](./index.md) | [⏮️](./2025-03-18.md) [⏭️](./2025-03-21.md)  
 # 2025-03-20  
 ## 💾 Software  
 - [Babylon.js](../software/babylon.md)  
