--- a/content/reflections/2025-03-21.md
+++ b/content/reflections/2025-03-21.md
@@ -11,3 +11,9 @@ tags:
 # 2025-03-21  
 ## 📺 Videos  
 - [Presentation Zen | Garr Reynolds | Talks at Google](../videos/presentation-zen-garr-reynolds-talks-at-google.md)  
+  
+## 🌌 Topics  
+- [Software Development and Coding](../topics/software-development-and-coding.md)  
+  
+## 📚 Books  
+- [Debugging: The 9 Indispensable Rules for Finding Even the Most Elusive Software and Hardware Problems](../books/debugging.md)  
